[gd_scene load_steps=16 format=3 uid="uid://dfgk0yugicv5h"]

[ext_resource type="Script" path="res://assets/interface/score_table/score_table_3D.gd" id="1_g6q0v"]
[ext_resource type="Script" path="res://addons/godot-xr-tools/objects/viewport_2d_in_3d.gd" id="1_x3d53"]
[ext_resource type="PackedScene" uid="uid://dbh0fb4owsg0x" path="res://assets/interface/score_table/score_table.tscn" id="2_83dgj"]
[ext_resource type="Script" path="res://addons/godot-xr-tools/objects/viewport_2d_in_3d_body.gd" id="3_rusvw"]
[ext_resource type="Material" uid="uid://b8bld4blks8nl" path="res://assets/interface/score_table/score_table_material.tres" id="4_n3eq6"]
[ext_resource type="PackedScene" uid="uid://cgb4pkhho2ao7" path="res://assets/interface/local_score_sign/local_score_sign_3D.tscn" id="5_nubge"]
[ext_resource type="Material" uid="uid://bkxyp7nmc8voo" path="res://assets/materials/barrel_wood_mat.tres" id="6_0lrky"]
[ext_resource type="PackedScene" uid="uid://dvy4ahyxsuad" path="res://assets/interface/global_score_sign/global_score_sign_3D.tscn" id="6_bgbka"]

[sub_resource type="QuadMesh" id="QuadMesh_25ogq"]
resource_local_to_scene = true
size = Vector2(3, 3)

[sub_resource type="ViewportTexture" id="ViewportTexture_p7w7m"]
viewport_path = NodePath("Viewport2Din3D/Viewport")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_jxu57"]
cull_mode = 2
shading_mode = 0
albedo_texture = SubResource("ViewportTexture_p7w7m")
texture_filter = 1

[sub_resource type="QuadMesh" id="QuadMesh_hbif0"]
resource_local_to_scene = true
material = ExtResource("4_n3eq6")
size = Vector2(3, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_sslsn"]
resource_local_to_scene = true
size = Vector3(3, 3, 0.02)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_7el2b"]
albedo_color = Color(0.670588, 0.27451, 0.27451, 1)

[sub_resource type="BoxMesh" id="BoxMesh_w5kjx"]
material = SubResource("StandardMaterial3D_7el2b")
size = Vector3(3.3, 0.1, 0.05)

[node name="scoreTable3D" type="Node3D"]
script = ExtResource("1_g6q0v")

[node name="Viewport2Din3D" type="Node3D" parent="."]
script = ExtResource("1_x3d53")
enabled = false
screen_size = Vector2(3, 3)
viewport_size = Vector2(630, 630)
transparent = 0
unshaded = true
scene = ExtResource("2_83dgj")
update_mode = 2
throttle_fps = 15.0

[node name="Viewport" type="SubViewport" parent="Viewport2Din3D"]
disable_3d = true
gui_embed_subwindows = true
size = Vector2i(630, 630)
render_target_update_mode = 1

[node name="Screen" type="MeshInstance3D" parent="Viewport2Din3D"]
mesh = SubResource("QuadMesh_25ogq")
surface_material_override/0 = SubResource("StandardMaterial3D_jxu57")

[node name="Screen2" type="MeshInstance3D" parent="Viewport2Din3D"]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, -0.0211995)
mesh = SubResource("QuadMesh_hbif0")

[node name="StaticBody3D" type="StaticBody3D" parent="Viewport2Din3D"]
collision_layer = 1048577
collision_mask = 0
script = ExtResource("3_rusvw")
screen_size = Vector2(3, 3)
viewport_size = Vector2(630, 630)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Viewport2Din3D/StaticBody3D"]
shape = SubResource("BoxShape3D_sslsn")

[node name="board_borders" type="Node3D" parent="."]
transform = Transform3D(0.95, 0, 0, 0, 0.95, 0, 0, 0, 0.95, 0, 0, 0)

[node name="border" type="MeshInstance3D" parent="board_borders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.5871, 0)
mesh = SubResource("BoxMesh_w5kjx")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("6_0lrky")

[node name="border2" type="MeshInstance3D" parent="board_borders"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.59858, 0)
mesh = SubResource("BoxMesh_w5kjx")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("6_0lrky")

[node name="border3" type="MeshInstance3D" parent="board_borders"]
transform = Transform3D(-4.24e-08, -1, 0, 0.97, -4.37114e-08, 0, 0, 0, 1, 1.6, 0, 0)
mesh = SubResource("BoxMesh_w5kjx")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("6_0lrky")

[node name="border4" type="MeshInstance3D" parent="board_borders"]
transform = Transform3D(-4.24e-08, -1, 0, 0.97, -4.37114e-08, 0, 0, 0, 1, -1.6, 0, 0)
mesh = SubResource("BoxMesh_w5kjx")
skeleton = NodePath("../..")
surface_material_override/0 = ExtResource("6_0lrky")

[node name="localScoreSign" parent="." instance=ExtResource("5_nubge")]
transform = Transform3D(0.99863, 0.052336, 0, -0.052336, 0.99863, 0, 0, 0, 1, -1.964, 1.374, 0.1)

[node name="globalScoreSign" parent="." instance=ExtResource("6_bgbka")]
transform = Transform3D(0.998624, -0.0524405, 0, 0.0524405, 0.998624, 0, 0, 0, 1, -1.976, 0.985, 0)

[connection signal="pointer_entered" from="Viewport2Din3D/StaticBody3D" to="Viewport2Din3D" method="_on_pointer_entered" flags=18]
[connection signal="pointer_exited" from="Viewport2Din3D/StaticBody3D" to="Viewport2Din3D" method="_on_pointer_exited" flags=18]
[connection signal="pointer_moved" from="Viewport2Din3D/StaticBody3D" to="Viewport2Din3D/StaticBody3D" method="_on_pointer_moved" flags=18]
[connection signal="pointer_pressed" from="Viewport2Din3D/StaticBody3D" to="Viewport2Din3D/StaticBody3D" method="_on_pointer_pressed" flags=18]
[connection signal="pointer_released" from="Viewport2Din3D/StaticBody3D" to="Viewport2Din3D/StaticBody3D" method="_on_pointer_released" flags=18]
